--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "autoprefixer": "^9.8.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.85.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
