--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-redux": "^7.1.34",
     "autoprefixer": "^9.8.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
